--- a/index.htm
+++ b/index.htm
@@ -7,11 +7,12 @@
     <style>
         div {
             text-align: center;
+            
         }
     </style>
 </head>
 <body>
-    <div class="">
+    <div>
         <h1>Deploying a basic webpage to netlify</h1>
     </div>
 </body>
