--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <h1>Deploying a basic webpage to netlify</h1>
+        <h1>Deploying a basic webpage to netlify. Changes made</h1>
     </div>
 </body>
 </html>
